[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.3", version = "0.2.3" }

cc = "=1.0.83"
clap = { version = "4.3.0", features = ["derive"] }
image = "0.24.8"
puredoom-rs = { path = "../puredoom-rs" }
serde = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2.15"
zkdoom-common = { path = "../zkdoom-common" }
hex = "0.4.3"
bytemuck = "1.14.3"
bincode = "1.3.3"

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "8302ab3" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "8302ab3" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "8302ab3" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "8302ab3" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", rev = "8302ab3" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", rev = "d27a5c8" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", rev = "2ca3bd7" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit", rev = "12f5529" }
ark-bn254 = { git = "https://github.com/arkworks-rs/curves", rev = "8c0256a" }
ark-pallas = { git = "https://github.com/arkworks-rs/curves", rev = "8c0256a" }
ark-vesta = { git = "https://github.com/arkworks-rs/curves", rev = "8c0256a" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "8c0256a" }