[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.3", version = "0.2.3" }
zkdoom-common = { path = "../zkdoom-common" }

[build-dependencies]
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.3", version = "0.2.3" }

[package.metadata.nexus-doom]
methods = ["guest"]